--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
 @custom-variant dark (&:is(.dark *));
 
 @layer components {
@@ -126,4 +129,7 @@ html {
   body {
     @apply bg-background text-foreground;
   }
+}
+* {
+  outline: 1px solid red !important;
 }
